rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__string.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (string), \"\\\"I am a closed string \\\"\")"
---
[
    Token {
        kind: Literal(
            Literal {
                kind: String(
                    "I am a closed string ",
                ),
                span: Span {
                    start: CharIndex(
                        1,
                    ),
                    end: CharIndex(
                        23,
                    ),
                },
            },
        ),
        span: Span {
            start: CharIndex(
                0,
            ),
            end: CharIndex(
                23,
            ),
        },
    },
]
