rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__string_quoting.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (string_quoting), r\"'webapps\\\\\\\\appliance\\\\\\\\'\")"
snapshot_kind: text
---
[
    Token {
        kind: Literal(
            Data(
                [
                    119,
                    101,
                    98,
                    97,
                    112,
                    112,
                    115,
                    92,
                    92,
                    97,
                    112,
                    112,
                    108,
                    105,
                    97,
                    110,
                    99,
                    101,
                    92,
                    92,
                ],
            ),
        ),
        position: (
            0,
            26,
        ),
    },
]
