rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__three_char_tokens.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (three_char_tokens), \">>> >>= >!< <<=\")"
snapshot_kind: text
---
[
    Token {
        kind: GreaterGreaterGreater,
        position: (
            0,
            3,
        ),
    },
    Token {
        kind: GreaterGreaterEqual,
        position: (
            4,
            7,
        ),
    },
    Token {
        kind: GreaterBangLess,
        position: (
            8,
            11,
        ),
    },
    Token {
        kind: LessLessEqual,
        position: (
            12,
            15,
        ),
    },
]
