rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__two_char_tokens.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (two_char_tokens),\n\"& && | || ! != !~ = == =~ > >> >= >< < << <= - -- + += ++ / /= * ** *=\")"
snapshot_kind: text
---
[
    Token {
        kind: Ampersand,
        position: (
            0,
            1,
        ),
    },
    Token {
        kind: AmpersandAmpersand,
        position: (
            2,
            4,
        ),
    },
    Token {
        kind: Pipe,
        position: (
            5,
            6,
        ),
    },
    Token {
        kind: PipePipe,
        position: (
            7,
            9,
        ),
    },
    Token {
        kind: Bang,
        position: (
            10,
            11,
        ),
    },
    Token {
        kind: BangEqual,
        position: (
            12,
            14,
        ),
    },
    Token {
        kind: BangTilde,
        position: (
            15,
            17,
        ),
    },
    Token {
        kind: Equal,
        position: (
            18,
            19,
        ),
    },
    Token {
        kind: EqualEqual,
        position: (
            20,
            22,
        ),
    },
    Token {
        kind: EqualTilde,
        position: (
            23,
            25,
        ),
    },
    Token {
        kind: Greater,
        position: (
            26,
            27,
        ),
    },
    Token {
        kind: GreaterGreater,
        position: (
            28,
            30,
        ),
    },
    Token {
        kind: GreaterEqual,
        position: (
            31,
            33,
        ),
    },
    Token {
        kind: GreaterLess,
        position: (
            34,
            36,
        ),
    },
    Token {
        kind: Less,
        position: (
            37,
            38,
        ),
    },
    Token {
        kind: LessLess,
        position: (
            39,
            41,
        ),
    },
    Token {
        kind: LessEqual,
        position: (
            42,
            44,
        ),
    },
    Token {
        kind: Minus,
        position: (
            45,
            46,
        ),
    },
    Token {
        kind: MinusMinus,
        position: (
            47,
            49,
        ),
    },
    Token {
        kind: Plus,
        position: (
            50,
            51,
        ),
    },
    Token {
        kind: PlusEqual,
        position: (
            52,
            54,
        ),
    },
    Token {
        kind: PlusPlus,
        position: (
            55,
            57,
        ),
    },
    Token {
        kind: Slash,
        position: (
            58,
            59,
        ),
    },
    Token {
        kind: SlashEqual,
        position: (
            60,
            62,
        ),
    },
    Token {
        kind: Star,
        position: (
            63,
            64,
        ),
    },
    Token {
        kind: StarStar,
        position: (
            65,
            67,
        ),
    },
    Token {
        kind: StarEqual,
        position: (
            68,
            70,
        ),
    },
]
