rust/src/nasl/syntax/tokenizer/snapshots/scannerlib__nasl__syntax__tokenizer__tests__use_tokenizer.snap
---
source: src/nasl/syntax/tokenizer/tests.rs
expression: "tokenize_ok(stringify! (use_tokenizer), \"local_var hello = 'World!';\")"
---
[
    Token {
        kind: Keyword(
            LocalVar,
        ),
        span: Span {
            start: CharIndex(
                0,
            ),
            end: CharIndex(
                9,
            ),
        },
    },
    Token {
        kind: Ident(
            Ident {
                ident: "hello",
                span: Span {
                    start: CharIndex(
                        10,
                    ),
                    end: CharIndex(
                        15,
                    ),
                },
            },
        ),
        span: Span {
            start: CharIndex(
                10,
            ),
            end: CharIndex(
                15,
            ),
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: CharIndex(
                16,
            ),
            end: CharIndex(
                17,
            ),
        },
    },
    Token {
        kind: Literal(
            Literal {
                kind: Data(
                    [
                        87,
                        111,
                        114,
                        108,
                        100,
                        33,
                    ],
                ),
                span: Span {
                    start: CharIndex(
                        19,
                    ),
                    end: CharIndex(
                        26,
                    ),
                },
            },
        ),
        span: Span {
            start: CharIndex(
                18,
            ),
            end: CharIndex(
                26,
            ),
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: CharIndex(
                26,
            ),
            end: CharIndex(
                27,
            ),
        },
    },
]
